--- a/CV19/Views/Windows/MainWindow.xaml
+++ b/CV19/Views/Windows/MainWindow.xaml
@@ -3,10 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CV19"
+        xmlns:vm="clr-namespace:CV19.ViewModel.Base"
+        xmlns:l="clr-namespace:CV19" 
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding Title}" 
+        Height="450" Width="800">
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
+        <TextBox HorizontalAlignment="Left" Margin="23,19,0,0" 
+                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" 
+                 VerticalAlignment="Top" Width="302" Height="20"/>
 
     </Grid>
 </Window>
