--- a/CV19/Views/Windows/MainWindow.xaml
+++ b/CV19/Views/Windows/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:fa="http://schemas.fontawesome.com/icons/"
+        xmlns:oxy="http://oxyplot.org/wpf"
         xmlns:vm="clr-namespace:CV19.ViewModel.Base"
         xmlns:cmd="clr-namespace:CV19.Infrastructure.Commands"
         xmlns:l="clr-namespace:CV19" 
@@ -33,6 +34,18 @@
             <MenuItem Header="Помощь">
                 <MenuItem Header="О программе"/>
             </MenuItem>
+            <MenuItem Command="{Binding ChangeTabIndexCommand}" CommandParameter="-1">
+                <MenuItem.Header>
+                    <fa:ImageAwesome Height="12" Icon="Regular_ArrowAltCircleLeft"/>
+                </MenuItem.Header>
+
+            </MenuItem>
+            <MenuItem Command="{Binding ChangeTabIndexCommand}" CommandParameter="+1">
+                <MenuItem.Header>
+                    <fa:ImageAwesome Height="12" Icon="Regular_ArrowAltCircleRight"/>
+                </MenuItem.Header>
+            </MenuItem>
+            <MenuItem Header="{Binding SelectedPageIndex}"/>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
@@ -42,36 +55,44 @@
                 <ProgressBar Width="120" Height="14" Value="25"/>
             </StatusBarItem>
         </StatusBar>
-        <TabControl>
+        <TabControl SelectedIndex="{Binding SelectedPageIndex}">
             <TabItem>
                 <!--<TabItem Header="Вкладка1">-->
-            <TabItem.Header>
-                <StackPanel Orientation="Horizontal">
-                    <fa:ImageAwesome Icon="Regular_File" Height="13" Margin="0,0,5,0" Foreground="Blue"/>
-                    <TextBlock Text="Вкладка 1"/>
-                </StackPanel>
-            </TabItem.Header>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="31*"/>
-                    <RowDefinition Height="66*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="327*"/>
-                    <ColumnDefinition Width="467*"/>
-                </Grid.ColumnDefinitions>
-                <Rectangle Grid.Row="0" Grid.Column="0" Fill="Blue" Stroke="Red" StrokeThickness="3" RadiusX="5" RadiusY="7"/>
-                <Ellipse Grid.Column="1" Grid.Row="0" Fill="Red" 
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <fa:ImageAwesome Icon="Regular_File" Height="13" Margin="0,0,5,0" Foreground="Blue"/>
+                        <TextBlock Text="Вкладка 1"/>
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="31*"/>
+                        <RowDefinition Height="66*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="327*"/>
+                        <ColumnDefinition Width="467*"/>
+                    </Grid.ColumnDefinitions>
+                    <Rectangle Grid.Row="0" Grid.Column="0" Fill="Blue" Stroke="Red" StrokeThickness="3" RadiusX="5" RadiusY="7"/>
+                    <Ellipse Grid.Column="1" Grid.Row="0" Fill="Red" 
                              StrokeThickness="3" Stroke="red">
-                    <Ellipse.InputBindings>
-                        <MouseBinding Command="{Binding CloseApplicationComand}"
+                        <Ellipse.InputBindings>
+                            <MouseBinding Command="{Binding CloseApplicationComand}"
                                           MouseAction="LeftDoubleClick"/>
-                    </Ellipse.InputBindings>
-                </Ellipse>
-                <GridSplitter Grid.Column="0" Grid.RowSpan="2" HorizontalAlignment="Right" Width="4"/>
-            </Grid>
+                        </Ellipse.InputBindings>
+                    </Ellipse>
+                    <GridSplitter Grid.Column="0" Grid.RowSpan="2" HorizontalAlignment="Right" Width="4"/>
+                </Grid>
             </TabItem>
-            <TabItem Header="Вкладка2"></TabItem>
+            <TabItem Header="График">
+                <oxy:PlotView Model="{Binding MyModel}">
+                </oxy:PlotView>
+            </TabItem>
+            <TabItem Header="Вкладка 2"></TabItem>
+            <TabItem Header="Вкладка 3"></TabItem>
+            <TabItem Header="Вкладка 4"></TabItem>
+            <TabItem Header="Вкладка 5"></TabItem>
+
         </TabControl>
     </DockPanel>
 </Window>
